--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "activityBar.background": "#3E1370",
     "titleBar.activeBackground": "#571B9D",
     "titleBar.activeForeground": "#FDFCFF"
-  }
+  },
+  "cSpell.words": ["Eiby", "poom"]
 }
