--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@next/eslint-plugin-next": "^14.2.8",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.5",
@@ -40,6 +41,7 @@
     "@types/react-window": "^1.8.8",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.8",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.2",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
