--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
     "titleBar.activeBackground": "#571B9D",
     "titleBar.activeForeground": "#FDFCFF"
   },
-  "cSpell.words": ["Eiby", "poom"]
+  "cSpell.words": ["Eiby", "ieby", "poom"]
 }
