--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/lab": "6.0.0-beta.9",
     "@mui/material": "^6.0.2",
     "@mui/x-date-pickers": "^7.16.0",
+    "@tanstack/react-query": "^5.55.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "i18next": "^23.14.0",
     "lodash": "^4.17.21",
@@ -29,11 +31,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
+    "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@next/eslint-plugin-next": "^14.2.8",
+    "@tanstack/eslint-plugin-query": "^5.53.0",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.5",
