--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,13 @@
     "titleBar.activeBackground": "#571B9D",
     "titleBar.activeForeground": "#FDFCFF"
   },
-  "cSpell.words": ["Eiby", "ieby", "poom"]
+  "cSpell.words": [
+    "curp",
+    "Eiby",
+    "ieby",
+    "imask",
+    "maskoptions",
+    "mexico",
+    "poom"
+  ]
 }
