--- a/package.json
+++ b/package.json
@@ -15,45 +15,47 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@mui/icons-material": "^6.0.2",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.1.6",
     "@mui/lab": "6.0.0-beta.9",
-    "@mui/material": "^6.0.2",
-    "@mui/x-date-pickers": "^7.16.0",
-    "@tanstack/react-query": "^5.55.0",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.1",
+    "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "i18next": "^23.14.0",
+    "i18next": "^23.16.4",
     "lodash": "^4.17.21",
     "next": "14.2.8",
     "next-i18next": "^15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-i18next": "^15.0.1",
+    "react-hook-form": "^7.53.1",
+    "react-i18next": "^15.1.0",
+    "react-imask": "^7.6.1",
+    "react-toastify": "^10.0.6",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@next/eslint-plugin-next": "^14.2.8",
-    "@tanstack/eslint-plugin-query": "^5.53.0",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@eslint/js": "^9.14.0",
+    "@next/eslint-plugin-next": "^14.2.17",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-window": "^1.8.8",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.8",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.2",
-    "globals": "^15.9.0",
-    "husky": "^9.1.5",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.4.0"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   }
 }
