--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "i18next": "^23.16.4",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "14.2.8",
     "next-i18next": "^15.3.1",
