--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "6.0.0-beta.9",
     "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.22.1",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
@@ -33,9 +34,10 @@
     "react-hook-form": "^7.53.1",
     "react-i18next": "^15.1.0",
     "react-imask": "^7.6.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
-    "yup": "^1.4.0",
-    "zod": "^3.23.8"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
