--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "html-to-image": "^1.11.11",
     "i18next": "^23.16.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "next": "14.2.8",
     "next-i18next": "^15.3.1",
